commit changes on fluxhadoop

--- a/src/main/resources/postprocessor.conf
+++ b/src/main/resources/postprocessor.conf
@@ -1,8 +1,8 @@
 postprocessor {
-  inputJsonPath = "file:////scratch/network/alexeys/bills/lexs/bills_combined_3_COILNJ_new.json",
-  inputResultParquet = "/user/alexeys/output_sample",
+  inputJsonPath = "file:///nfs/turbo/lsa-shiraito/globus_share/bd/alexeys/bills/lexs/bills_combined_50_p*.json",
+  inputResultParquet = "/user/shiraito/workflow2/raw/exclALEC/3gram_d0.99_100buckets_1048576features/*/",
   getNBest = 50000,
   isAscending = false,
-  outputSkimFile = "/user/alexeys/output_skimmed",
-  outputLightFile = "/user/alexeys/output_light"
+  outputSkimFile = "/user/shiraito/workflow2/shiraito/skimmed/3gram",
+  outputLightFile = "/user/shiraito/workflow2/shiraito/light/3gram"
 }
