--- a/src/main/resources/workflow1_makeCartesian.conf
+++ b/src/main/resources/workflow1_makeCartesian.conf
@@ -5,13 +5,13 @@ workflow1_makeCartesian {
   onlyInOut    = true,
   nGramGranularity = 5,
   addNGramFeatures = true,
-  inputFile    = "file:///scratch/network/shiraito/scratch_alexeys/bills/lexs/bills_combined_50_p*.json",
-  outputFile   = "/user/shiraito/baseline/intermed/standYourGround_onlyOne/pairs",
-  outputParquetFile = "/user/shiraito/baseline/intermed/standYourGround_onlyOne/parquet",
-  nPartitions  = 40,
+  inputFile    = "file:///nfs/turbo/lsa-shiraito/globus_share/bd/alexeys/bills/lexs/bills_combined_50_p*.json",
+  outputFile   = "/user/shiraito/baseline/intermed/foodSchools_seeminglyUnrelated/pairs",
+  outputParquetFile = "/user/shiraito/baseline/intermed/foodSchools_seeminglyUnrelated/parquet",
+  nPartitions  = 120,
   numTextFeatures = 1048576,
   kval = 40,
   numConcepts = 100,
-  cat = "data/standYourGround.txt",
-  bothIn = false
+  cat = "data/foodSchools_seeminglyUnrelated.txt",
+  bothIn = true
 }
