--- a/src/main/resources/ldaAnalyzer.conf
+++ b/src/main/resources/ldaAnalyzer.conf
@@ -1,8 +1,8 @@
 ldaAnalyzer {
   verbose = false,
   docVersion      = "Introduced",
-  inputFile  = "file:///scratch/network/alexeys/bills/lexs/bills_combined_50_p*.json",
-  outputFile      = "/user/shiraito/lda_out/LDA_TF_ALL_40t_unigram_customStop_removeShort_stem_out20_nmaxiter20",
+  inputFile  = "/user/shiraito/text_data/billcontents_aggtrees_above15/part-*.json",
+  outputFile      = "/user/shiraito/lda_out/aggtrees_above15",
   nGramGranularity = 5,
   addNGramFeatures = false,
   kval = 40,
