--- a/src/main/resources/workflow1_makeCartesian.conf
+++ b/src/main/resources/workflow1_makeCartesian.conf
@@ -5,13 +5,13 @@ workflow1_makeCartesian {
   onlyInOut    = true,
   nGramGranularity = 5,
   addNGramFeatures = true,
-  inputFile    = "file:///scratch/network/shiraito/scratch_alexeys/bills/lexs/bills_combined_50_p*.json",
-  outputFile   = "/user/shiraito/baseline/intermed/standYourGround_onlyOne/pairs",
-  outputParquetFile = "/user/shiraito/baseline/intermed/standYourGround_onlyOne/parquet",
+  inputFile    = "/user/shiraito/text_data/bills_combined_50_p*.json",
+  outputFile   = "/user/shiraito/baseline/intermed/env_CA/pairs_wCompact",
+  outputParquetFile = "/user/shiraito/baseline/intermed/env_CA/parquet_wCompact",
   nPartitions  = 40,
   numTextFeatures = 1048576,
   kval = 40,
   numConcepts = 100,
-  cat = "data/standYourGround.txt",
+  cat = "data/env_CA.txt",
   bothIn = false
 }
