--- a/src/main/resources/workflow2.conf
+++ b/src/main/resources/workflow2.conf
@@ -1,7 +1,7 @@
 workflow2 {
   docVersion   = "Introduced",
   nGramGranularity = 5,
-  inputFile    = "file:///scratch/network/alexeys/bills/lexs/bills_combined_50_p*.json",
-  outputFileBase   = "/user/shiraito/workflow2/raw/inclALEC/5gram_d0.99_100buckets_1048576features/",
+  inputFile    = "/user/shiraito/text_data/droppedBySelector_sub_firstHalfStates/*.json",
+  outputFileBase   = "/user/shiraito/workflow2/raw/droppedBySelector_sub_firstHalfStates/5gram_d0.99_100buckets_1048576features/",
   numTextFeatures = 1048576
 }
